Pull from  raghav
Pull from  raghav

--- a/components/Html/package.json
+++ b/components/Html/package.json
@@ -1,5 +1,5 @@
 {
-    "private": true,
-    "name": "Html",
-    "main": "./Html.js"
-  }
+  "private": true,
+  "name": "html",
+  "main": "./Html.js"
+}
