--- a/package.json
+++ b/package.json
@@ -1,41 +1,65 @@
 {
   "private": true,
+  "name": "header",
+  "main": "./Header.js",
   "dependencies": {
     "bluebird": "3.5.0",
-    "express": "^4.17.3",
-    "moment": "^2.29.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "express": "4.15.4",
+    "moment": "2.18.1",
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "babel-cli": "6.26.0",
+    "autoprefixer": "^7.1.4",
+    "babel-cli": "6.7.5",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.0",
     "babel-loader": "7.1.2",
-    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-plugin-transform-runtime": "6.7.5",
     "babel-preset-env": "1.6.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
     "browser-sync": "^2.27.9",
+    "css-loader": "0.28.5",
     "del": "3.0.0",
-    "eslint": "^8.11.0",
+    "eslint": "4.6.1",
     "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-react": "7.3.0",
-    "extend": "^3.0.2",
+    "extend": "3.0.0",
+    "file-loader": "0.11.2",
     "gaze": "1.1.2",
     "ncp": "2.0.0",
     "node-style-loader": "0.0.1-alpha",
-    "postcss": "^8.4.12",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.1",
-    "precss": "^4.0.0",
-    "webpack": "^3.12.0",
-    "webpack-dev-middleware": "2.0.4"
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
+    "style-loader": "0.18.2",
+    "url-loader": "0.5.9",
+    "webpack": "3.5.6",
+    "webpack-dev-middleware": "github:koistya/webpack-dev-middleware#master",
+    "webpack-hot-middleware": "^2.25.1"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "rules": {
+      "comma-dangle": 0,
+      "id-length": [
+        2,
+        {
+          "exceptions": [
+            "i",
+            "_",
+            "x",
+            "s"
+          ]
+        }
+      ]
+    }
   },
   "scripts": {
     "lint": "eslint components core data routes test tools",
     "build": "babel-node tools/run build",
-    "serve": "node build/server.js"
+    "serve": "node build/server.js",
+    "start": "babel-node tools/run start"
   }
 }
