--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "eslint": "4.6.1",
     "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-react": "7.3.0",
+    "express-graphql": "^0.12.0",
     "extend": "3.0.0",
     "file-loader": "0.11.2",
     "gaze": "1.1.2",
+    "graphql": "^16.3.0",
     "ncp": "2.0.0",
     "node-style-loader": "0.0.1-alpha",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
+    "sequelize": "^6.17.0",
+    "sqlite3": "^5.0.2",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
     "webpack": "3.5.6",
